@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-22T08:18:11Z",
-  "count" : 9,
-  "count_minmax" : [ 9, 11 ],
-  "count_decinc" : [ -2, +0 ],
-  "uniques" : 7,
-  "uniques_minmax" : [ 7, 7 ],
-  "uniques_decinc" : [ -0, +0 ]
+  "timestamp" : "2022-05-22T16:20:23Z",
+  "count" : 8,
+  "count_minmax" : [ 8, 11 ],
+  "count_decinc" : [ -3, +0 ],
+  "uniques" : 6,
+  "uniques_minmax" : [ 6, 7 ],
+  "uniques_decinc" : [ -1, +0 ]
 }
