@@ -1,16 +1,16 @@
 {
-  "timestamp" : "2022-05-22T08:18:11Z",
+  "timestamp" : "2022-05-22T16:20:23Z",
   "count_outdated" : 275,
   "uniques_outdated" : 150,
-  "count" : 319,
+  "count" : 321,
   "uniques" : 180,
   "clones" : [
     {
       "timestamp": "2022-05-08T00:00:00Z",
-      "count": 9,
-      "count_minmax": [ 9, 11 ],
-      "uniques": 7,
-      "uniques_minmax": [ 7, 7 ]
+      "count": 8,
+      "count_minmax": [ 8, 11 ],
+      "uniques": 6,
+      "uniques_minmax": [ 6, 7 ]
     },
     {
       "timestamp": "2022-05-09T00:00:00Z",
@@ -102,6 +102,13 @@
       "count_minmax": [ 2, 2 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
+    },
+    {
+      "timestamp": "2022-05-22T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
