@@ -1,11 +1,11 @@
 {
-  "count": 44,
-  "uniques": 15,
+  "count": 46,
+  "uniques": 16,
   "clones": [
     {
       "timestamp": "2022-05-08T00:00:00Z",
-      "count": 9,
-      "uniques": 7
+      "count": 8,
+      "uniques": 6
     },
     {
       "timestamp": "2022-05-09T00:00:00Z",
@@ -71,6 +71,11 @@
       "timestamp": "2022-05-21T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-05-22T00:00:00Z",
+      "count": 3,
+      "uniques": 1
     }
   ]
 }
