@@ -1,3 +1,10 @@
+2022-05-22T16:20:23Z:
+* notice: last 14d: unq all: 16 46
+* notice: prev accum: outdated-unq outdated-all / unq all: 150 275 / 180 319
+* notice: next accum: outdated-unq outdated-all / unq all: 150 275 / 180 321
+* notice: prev exec diff / last date diff / accum: unq all: +1 +3 -1 -1 / +1 +3 -0 -0 / 1 3
+* notice: changed dates: [2022-05-08 2022-05-22]
+
 2022-05-22T08:18:11Z:
 * notice: last 14d: unq all: 15 44
 * notice: prev accum: outdated-unq outdated-all / unq all: 150 275 / 180 320
